--- a/.gitmodules
+++ b/.gitmodules
@@ -1,1 +1,7 @@
 
+[submodule "LiC-app"]
+	path = LiC-app
+	url = https://github.com/LiteratureInContext/LiC-app
+[submodule "LiC-data"]
+	path = LiC-data
+	url = https://github.com/LiteratureInContext/LiC-data
